2005-09-06  Dan Williams  <dcbw@redhat.com>

	Patch from Suhail Ahmed <suhail.ahmed@intel.com>
	* src/backends/NetworkManagerNeoShine.c
	  src/backends/NetworkManagerRedFlag.c
	  configure.in
	  Makefile.am
		- Add Red Flat Linux and NeoShine backends

2005-07-07  Dan Williams  <dcbw@redhat.com>

	Patch from Derek Atkins <warlord@MIT.EDU>
	* src/nm-dbus-net.c:
		- (nm_dbus_get_ap_from_object_path): differentiate similar ESSIDs

2005-06-27  Dan Williams <dcbw@redhat.com>

    Patch from Robert Love:
    * src/nm-dbus-nm.c
        - (nm_dbus_nm_set_wireless_enabled): fix bug that casued wireless
		devies not to be re-enabled

2005-06-17  Dan Williams <dcbw@redhat.com>

	* Tag 0.3.5 release

2005-06-17  Dan Williams <dcbw@redhat.com>

	* panel-applet/NMWirelessAppletDbus.c
		- Alphabetize wireless networks in the applet menu

2005-06-17  Dan Williams <dcbw@redhat.com>

	Backport Wireless Scan Methods from HEAD

2005-06-17  Dan Williams <dcbw@redhat.com>

	Backport static IP DNS fixup patch from HEAD

2005-06-17  Dan Williams <dcbw@redhat.com>

	Backport Robert Love's applet beautification patch from HEAD

2005-05-16  Dan Williams <dcbw@redhat.com>

	* Remove unused variables

2005-05-16  Dan Williams  <dcbw@redhat.com>

	* dhcpcd/client.c
		- (dhcp_handle_transaction): Fix condition that may have resulted
			in incorrect return of RET_DHCP_SUCCESS when we really timed out.

2005-05-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-dbus-nm.c: Fix misuse of a g_assert() (Colin Walters)

	Patch from Bill Moss:
	* src/NetworkManagerDevice.c:
		- (nm_device_set_up_down): Fix return value checking of ioctl()
	* src/NetworkManagerPolicy.c:
		- (nm_policy_allowed_ap_list_update): Improve handling of
			non-ESSID broadcasting access points
	* src/NetworkManagerAPList.c:
		- (nm_ap_list_remove_duplicate_essids):
		  (nm_ap_list_merge_scanned_ap):
			Improve handling of non-ESSID broadcasting access points

	Patch from Tom Parker:
	* src/NetworkManagerDevice.c: