@@ -1,5 +1,12 @@
 2005-09-06  Dan Williams  <dcbw@redhat.com>
 
+	Patch from Tomislav Vujec <tvujec@redhat.com>
+	* src/NetworkManagerDevice.c
+		- (nm_get_device_by_udi): don't return a device when we
+			actually didn't find what we were looking for
+
+2005-09-06  Dan Williams  <dcbw@redhat.com>
+
 	Patch from Suhail Ahmed <suhail.ahmed@intel.com>
 	* src/backends/NetworkManagerNeoShine.c
 	  src/backends/NetworkManagerRedFlag.c
